<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="14dp"
    android:backgroundTint="?attr/colorOnSurface"
    app:cardElevation="4dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Heading -->
        <TextView
            android:id="@+id/dialog_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:textColor="@color/gold"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:hint="@string/task_info"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/gold"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/gold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#78909C"
                android:textDirection="ltr"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="14dp">

            <Button
                android:id="@+id/dialog_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_cancelBtn"
                android:textColor="@color/gold"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <Button
                android:id="@+id/dialog_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_addBtn"
                android:textColor="@color/gold"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginStart="8dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
