<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <ImageView
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:contentDescription="@string/app_name"
            android:tooltipText="@string/app_name"
            android:layout_height="28dp"
            android:src="@drawable/justdo_title"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:background="@color/foreground"
        app:tabTextColor="@color/white"
        android:layout_width="match_parent"
        app:tabSelectedTextColor="@color/gold"
        app:tabIndicatorColor="@color/gold"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_todo"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_completed"
            />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frameLayout"/>

</LinearLayout>